--- a/index.html
+++ b/index.html
@@ -87,5 +87,37 @@
     </ul>
   </section>
 
+  <section>
+    <h2>Comidas</h2>
+    <ul>
+      <li>
+        <div class="Details">
+          <h3>Fritas</h3>
+          <p class="description"> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+        <strong class="Price"> R$19,00</strong>
+
+      </li>
+
+        <li>
+          <div class="Details">
+          <h3>Arroz</h3>
+          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <strong class="Price"> R$55,00/kg</strong>
+
+        <li>
+          
+        <div class="Details">
+          <h3>Carne</h3>
+          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.e</p>
+        </div>
+        <strong class="Price"> R$12,00</strong>
+      </li>
+
+    </ul>
+  </section>
+
   </body>
   </html>
