--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h3>Água</h3>
           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
-        <strong class="Price"> R$55,00/kg</strong>
+        <strong class="Price"> R$55,00</strong>
 
         <li>
           
